src/main/java/com/example/meditag/global/error/exception/CustomException.java
package com.example.meditag.global.error.exception;

public class CustomException {
}
